[package]
name = "tls-detect"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Liesenfeld <alexander.liesenfeld@outlook.com>"]
description = "A library to simplify detection of LTS ClientHello messages in a byte stream."
license = "Apache-2.0"
keywords = ["https", "tls", "check", "probe"]
categories = ["network-programming"]
repository = "https://github.com/alexliesenfeld/tls-detect-rs"
readme = "README.md"

[dependencies]
async-trait = "0"